工具/groff-1.22/src/preproc/refer/y.output
Grammar

    0 $accept: expr $end

    1 expr: optional_conditional

    2 conditional: alternative
    3            | alternative '?' optional_conditional ':' conditional

    4 optional_conditional: /* empty */
    5                     | conditional

    6 alternative: list
    7            | alternative '|' list
    8            | alternative '&' list

    9 list: substitute
   10     | list substitute

   11 substitute: string
   12           | substitute '~' string

   13 string: '@'
   14       | TOKEN_LITERAL
   15       | TOKEN_LETTER
   16       | TOKEN_LETTER number
   17       | '%' TOKEN_LETTER
   18       | '%' digits
   19       | string '.' flag TOKEN_LETTER optional_number
   20       | string '+' number
   21       | string '-' number
   22       | string '*'
   23       | '(' optional_conditional ')'
   24       | '<' optional_conditional '>'

   25 optional_number: /* empty */
   26                | number

   27 number: TOKEN_DIGIT
   28       | number TOKEN_DIGIT

   29 digits: TOKEN_DIGIT
   30       | digits TOKEN_DIGIT

   31 flag: /* empty */
   32     | '+'
   33     | '-'


Terminals, with rules where they appear

$end (0) 0
'%' (37) 17 18
'&' (38) 8
'(' (40) 23
')' (41) 23
'*' (42) 22
'+' (43) 20 32
'-' (45) 21 33
'.' (46) 19
':' (58) 3
'<' (60) 24
'>' (62) 24
'?' (63) 3
'@' (64) 13
'|' (124) 7
'~' (126) 12
error (256)
TOKEN_LETTER (258) 15 16 17 19
TOKEN_LITERAL (259) 14
TOKEN_DIGIT (260) 27 28 29 30


Nonterminals, with rules where they appear

$accept (21)
    on left: 0
expr (22)
    on left: 1, on right: 0
conditional (23)
    on left: 2 3, on right: 3 5
optional_conditional (24)
    on left: 4 5, on right: 1 3 23 24
alternative (25)
    on left: 6 7 8, on right: 2 3 7 8
list (26)
    on left: 9 10, on right: 6 7 8 10
substitute (27)
    on left: 11 12, on right: 9 10 12
string (28)
    on left: 13 14 15 16 17 18 19 20 21 22 23 24, on right: 11 12 19
    20 21 22
optional_number (29)
    on left: 25 26, on right: 19
number (30)
    on left: 27 28, on right: 16 20 21 26 28
digits (31)
    on left: 29 30, on right: 18 30
flag (32)
    on left: 31 32 33, on right: 19


state 0

    0 $accept: . expr $end

    TOKEN_LETTER   shift, and go to state 1
    TOKEN_LITERAL  shift, and go to state 2
    '@'            shift, and go to state 3
    '%'            shift, and go to state 4
    '('            shift, and go to state 5
    '<'            shift, and go to state 6

    $default  reduce using rule 4 (optional_conditional)

    expr                  go to state 7
    conditional           go to state 8
    optional_conditional  go to state 9
    alternative           go to state 10
    list                  go to state 11
    substitute            go to state 12
    string                go to state 13


state 1

   15 string: TOKEN_LETTER .
   16       | TOKEN_LETTER . number

    TOKEN_DIGIT  shift, and go to state 14

    $default  reduce using rule 15 (string)

    number  go to state 15


state 2

   14 string: TOKEN_LITERAL .

    $default  reduce using rule 14 (string)


state 3

   13 string: '@' .

    $default  reduce using rule 13 (string)


state 4

   17 string: '%' . TOKEN_LETTER
   18       | '%' . digits

    TOKEN_LETTER  shift, and go to state 16
    TOKEN_DIGIT   shift, and go to state 17

    digits  go to state 18


state 5

   23 string: '(' . optional_conditional ')'

    TOKEN_LETTER   shift, and go to state 1
    TOKEN_LITERAL  shift, and go to state 2
    '@'            shift, and go to state 3
    '%'            shift, and go to state 4
    '('            shift, and go to state 5
    '<'            shift, and go to state 6

    $default  reduce using rule 4 (optional_conditional)

    conditional           go to state 8
    optional_conditional  go to state 19
    alternative           go to state 10
    list                  go to state 11
    substitute            go to state 12
    string                go to state 13


state 6

   24 string: '<' . optional_conditional '>'

    TOKEN_LETTER   shift, and go to state 1
    TOKEN_LITERAL  shift, and go to state 2
    '@'            shift, and go to state 3
    '%'            shift, and go to state 4
    '('            shift, and go to state 5
    '<'            shift, and go to state 6

    $default  reduce using rule 4 (optional_conditional)

    conditional           go to state 8
    optional_conditional  go to state 20
    alternative           go to state 10
    list                  go to state 11
    substitute            go to state 12
    string                go to state 13


state 7

    0 $accept: expr . $end

    $end  shift, and go to state 21


state 8

    5 optional_conditional: conditional .

    $default  reduce using rule 5 (optional_conditional)


state 9

    1 expr: optional_conditional .

    $default  reduce using rule 1 (expr)


state 10

    2 conditional: alternative .
    3            | alternative . '?' optional_conditional ':' conditional
    7 alternative: alternative . '|' list
    8            | alternative . '&' list

    '?'  shift, and go to state 22
    '|'  shift, and go to state 23
    '&'  shift, and go to state 24

    $default  reduce using rule 2 (conditional)


state 11

    6 alternative: list .
   10 list: list . substitute

    TOKEN_LETTER   shift, and go to state 1
    TOKEN_LITERAL  shift, and go to state 2
    '@'            shift, and go to state 3
    '%'            shift, and go to state 4
    '('            shift, and go to state 5
    '<'            shift, and go to state 6

    $default  reduce using rule 6 (alternative)

    substitute  go to state 25
    string      go to state 13


state 12

    9 list: substitute .
   12 substitute: substitute . '~' string

    '~'  shift, and go to state 26

    $default  reduce using rule 9 (list)


state 13

   11 substitute: string .
   19 string: string . '.' flag TOKEN_LETTER optional_number
   20       | string . '+' number
   21       | string . '-' number
   22       | string . '*'

    '.'  shift, and go to state 27
    '+'  shift, and go to state 28
    '-'  shift, and go to state 29
    '*'  shift, and go to state 30

    $default  reduce using rule 11 (substitute)


state 14

   27 number: TOKEN_DIGIT .

    $default  reduce using rule 27 (number)


state 15

   16 string: TOKEN_LETTER number .
   28 number: number . TOKEN_DIGIT

    TOKEN_DIGIT  shift, and go to state 31

    $default  reduce using rule 16 (string)


state 16

   17 string: '%' TOKEN_LETTER .

    $default  reduce using rule 17 (string)


state 17

   29 digits: TOKEN_DIGIT .

    $default  reduce using rule 29 (digits)


state 18

   18 string: '%' digits .
   30 digits: digits . TOKEN_DIGIT

    TOKEN_DIGIT  shift, and go to state 32

    $default  reduce using rule 18 (string)


state 19

   23 string: '(' optional_conditional . ')'

    ')'  shift, and go to state 33


state 20

   24 string: '<' optional_conditional . '>'

    '>'  shift, and go to state 34


state 21

    0 $accept: expr $end .

    $default  accept


state 22

    3 conditional: alternative '?' . optional_conditional ':' conditional

    TOKEN_LETTER   shift, and go to state 1
    TOKEN_LITERAL  shift, and go to state 2
    '@'            shift, and go to state 3
    '%'            shift, and go to state 4
    '('            shift, and go to state 5
    '<'            shift, and go to state 6

    $default  reduce using rule 4 (optional_conditional)

    conditional           go to state 8
    optional_conditional  go to state 35
    alternative           go to state 10
    list                  go to state 11
    substitute            go to state 12
    string                go to state 13


state 23

    7 alternative: alternative '|' . list

    TOKEN_LETTER   shift, and go to state 1
    TOKEN_LITERAL  shift, and go to state 2
    '@'            shift, and go to state 3
    '%'            shift, and go to state 4
    '('            shift, and go to state 5
    '<'            shift, and go to state 6

    list        go to state 36
    substitute  go to state 12
    string      go to state 13


state 24

    8 alternative: alternative '&' . list

    TOKEN_LETTER   shift, and go to state 1
    TOKEN_LITERAL  shift, and go to state 2
    '@'            shift, and go to state 3
    '%'            shift, and go to state 4
    '('            shift, and go to state 5
    '<'            shift, and go to state 6

    list        go to state 37
    substitute  go to state 12
    string      go to state 13


state 25

   10 list: list substitute .
   12 substitute: substitute . '~' string

    '~'  shift, and go to state 26

    $default  reduce using rule 10 (list)


state 26

   12 substitute: substitute '~' . string

    TOKEN_LETTER   shift, and go to state 1
    TOKEN_LITERAL  shift, and go to state 2
    '@'            shift, and go to state 3
    '%'            shift, and go to state 4
    '('            shift, and go to state 5
    '<'            shift, and go to state 6

    string  go to state 38


state 27

   19 string: string '.' . flag TOKEN_LETTER optional_number

    '+'  shift, and go to state 39
    '-'  shift, and go to state 40

    $default  reduce using rule 31 (flag)

    flag  go to state 41


state 28

   20 string: string '+' . number

    TOKEN_DIGIT  shift, and go to state 14

    number  go to state 42


state 29

   21 string: string '-' . number

    TOKEN_DIGIT  shift, and go to state 14

    number  go to state 43


state 30

   22 string: string '*' .

    $default  reduce using rule 22 (string)


state 31

   28 number: number TOKEN_DIGIT .

    $default  reduce using rule 28 (number)


state 32

   30 digits: digits TOKEN_DIGIT .

    $default  reduce using rule 30 (digits)


state 33

   23 string: '(' optional_conditional ')' .

    $default  reduce using rule 23 (string)


state 34

   24 string: '<' optional_conditional '>' .

    $default  reduce using rule 24 (string)


state 35

    3 conditional: alternative '?' optional_conditional . ':' conditional

    ':'  shift, and go to state 44


state 36

    7 alternative: alternative '|' list .
   10 list: list . substitute

    TOKEN_LETTER   shift, and go to state 1
    TOKEN_LITERAL  shift, and go to state 2
    '@'            shift, and go to state 3
    '%'            shift, and go to state 4
    '('            shift, and go to state 5
    '<'            shift, and go to state 6

    $default  reduce using rule 7 (alternative)

    substitute  go to state 25
    string      go to state 13


state 37

    8 alternative: alternative '&' list .
   10 list: list . substitute

    TOKEN_LETTER   shift, and go to state 1
    TOKEN_LITERAL  shift, and go to state 2
    '@'            shift, and go to state 3
    '%'            shift, and go to state 4
    '('            shift, and go to state 5
    '<'            shift, and go to state 6

    $default  reduce using rule 8 (alternative)

    substitute  go to state 25
    string      go to state 13


state 38

   12 substitute: substitute '~' string .
   19 string: string . '.' flag TOKEN_LETTER optional_number
   20       | string . '+' number
   21       | string . '-' number
   22       | string . '*'

    '.'  shift, and go to state 27
    '+'  shift, and go to state 28
    '-'  shift, and go to state 29
    '*'  shift, and go to state 30

    $default  reduce using rule 12 (substitute)


state 39

   32 flag: '+' .

    $default  reduce using rule 32 (flag)


state 40

   33 flag: '-' .

    $default  reduce using rule 33 (flag)


state 41

   19 string: string '.' flag . TOKEN_LETTER optional_number

    TOKEN_LETTER  shift, and go to state 45


state 42

   20 string: string '+' number .
   28 number: number . TOKEN_DIGIT

    TOKEN_DIGIT  shift, and go to state 31

    $default  reduce using rule 20 (string)


state 43

   21 string: string '-' number .
   28 number: number . TOKEN_DIGIT

    TOKEN_DIGIT  shift, and go to state 31

    $default  reduce using rule 21 (string)


state 44

    3 conditional: alternative '?' optional_conditional ':' . conditional

    TOKEN_LETTER   shift, and go to state 1
    TOKEN_LITERAL  shift, and go to state 2
    '@'            shift, and go to state 3
    '%'            shift, and go to state 4
    '('            shift, and go to state 5
    '<'            shift, and go to state 6

    conditional  go to state 46
    alternative  go to state 10
    list         go to state 11
    substitute   go to state 12
    string       go to state 13


state 45

   19 string: string '.' flag TOKEN_LETTER . optional_number

    TOKEN_DIGIT  shift, and go to state 14

    $default  reduce using rule 25 (optional_number)

    optional_number  go to state 47
    number           go to state 48


state 46

    3 conditional: alternative '?' optional_conditional ':' conditional .

    $default  reduce using rule 3 (conditional)


state 47

   19 string: string '.' flag TOKEN_LETTER optional_number .

    $default  reduce using rule 19 (string)


state 48

   26 optional_number: number .
   28 number: number . TOKEN_DIGIT

    TOKEN_DIGIT  shift, and go to state 31

    $default  reduce using rule 26 (optional_number)
